[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/Hook.gd" type="Script" id=1]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.705454, 1.60752, 0.201053 )

[node name="Hook" type="Spatial"]
script = ExtResource( 1 )

[node name="Body" type="Area" parent="."]
transform = Transform( -8.74228e-09, 0.2, 0, -0.2, -8.74228e-09, 0, 0, 0, 0.2, 0.35, 0.14, 0 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Body"]
transform = Transform( 1, 3.55271e-15, 0, -3.55271e-15, 1, 0, 0, 0, 1, 0.569395, -0.211867, 0 )
shape = SubResource( 1 )

[node name="TimerStart" type="Timer" parent="."]
[connection signal="body_entered" from="Body" to="." method="_on_Body_entered"]
[connection signal="timeout" from="TimerStart" to="." method="_on_TimerStart_timeout"]
